--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,5 @@ timm==0.4.12
 tokenizers==0.19.1
 torchmetrics==1.4.1
 tqdm==4.66.4
-transformers==4.42.4
-triton==2.3.1
-wandb
+causal_conv1d==1.0.0
+mamba_ssm==1.0.1
